@@ -1,3 +1,8 @@
+2003-05-26  Alif Wahid  <awah005@users.sourceforge.net>
+
+	* examples/scribble-gl.py (Scribble.display): Optimised
+	execution time by removing redundant method invokations.
+
 2003-05-24  Alif Wahid  <awah005@users.sourceforge.net>
 
 	* examples/scribble-gl.py: Added new example program. This
